# algebra-algorithms

./: CMakeLists.txt  ldltdecomposition.cpp  ldltdecomposition.h  luAndLdlt.cpp  luAndLdlt.h  ludecomposition.cpp  ludecomposition.h  main.cpp  matrices.in  matrices.txt  matrix.cpp  matrix.h  specialMatrixSpeedTest.cpp  specialMatrixSpeedTest.h  specialmatrix.cpp  specialmatrix.h  symmetricmatrix.cpp  symmetricmatrix.h  tridiagonalmatrix.cpp  tridiagonalmatrix.h
task_1/: special_matrix.cpp  special_matrix.h  special_matrix_speed_test.cpp  special_matrix_speed_test.h
task_2/: lu_decomposition.cpp  lu_decomposition.h
task_3/: ldlt_decomposition.cpp  ldlt_decomposition.h  lu_and_ldlt_speed_test.cpp  lu_and_ldlt_speed_test.h  symmetric_matrix.cpp  symmetric_matrix.h
task_4/: tridiagonal_matrix.cpp  tridiagonal_matrix.h
task_5/: relaxation.cpp  relaxation.h  relaxation_explorer.cpp  relaxation_explorer.h
